Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-5487

Race in runtime-profile.cc::toThrift() can lead to corrupt profiles being generated while query is running

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • Impala 2.9.0
    • Impala 2.10.0
    • Backend
    • None
    • ghx-label-1

    Description

      node.num_children is initialized before children_ gets locked and if the latter changes in the meantime, the thrift profiles cannot be deconstructed properly.

      Attachments

        Issue Links

          Activity

            People

              lv Lars Volker
              lv Lars Volker
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: